# league-snowflake-pipeline-monitor

./: .gitignore  README.md  environment.yml  pyproject.toml  settings.py  snowflake.yml  streamlit_app.py
assets/sample_data/: bronze_copy_history.csv  bronze_file_formats.csv  bronze_object_inventory.csv  bronze_pipe_status.csv  bronze_pipes.csv  bronze_row_counts.csv  bronze_stage_files.csv  bronze_stages.csv  bronze_stream_state.csv  bronze_streams.csv  gold_dt_freshness.csv  gold_grain_validation.csv  gold_object_inventory.csv  gold_refresh_history.csv  seed_date_index.csv  seed_load_state.csv  seed_object_inventory.csv  seed_procedures.csv  seed_row_count_validation.csv  seed_stage_files.csv  seed_stages.csv  silver_object_inventory.csv  silver_row_counts.csv  silver_stream_state.csv  silver_task_history.csv  silver_task_summary.csv  silver_vs_gold_counts.csv
src/: data.py  mock.py  query.py  theme.py  ui.py
src/pipeline_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: __init__.py  bronze.py  components.py  gold.py  seed.py  silver.py  theme.py
