[project]
name = "pipeline-monitor"
version = "0.1.0"
description = "One-stop pipeline monitor dashboard for the league-snowflake medallion pipeline (mirrors models/*/monitor.ipynb)."
requires-python = "~=3.11.0"
dependencies = [
    "streamlit[snowflake]",
    "pandas",
    "pydantic>=2.0.0",
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]
exclude-newer = "7 days"

[tool.uv.exclude-newer-package]
streamlit = false
