[project]
name = "pipeline-monitor"
version = "0.1.0"
description = "Pipeline monitor dashboard for the league-snowflake medallion pipeline (mirrors models/*/monitor.ipynb)."
requires-python = "~=3.11.0"
dependencies = [
    "streamlit[snowflake]",
    "pandas",
]

[tool.uv]
constraint-dependencies = ["numba>=0.56.0"]
exclude-newer = "2026-07-01T00:00:00Z"